test: add linting rules and lint project

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,14 @@
 {
-    "extends": "standard",
-    "plugins": [
-        "jest"
-    ],
-    "env": {
-        "jest/globals": true
-    }
+  "extends": ["plugin:@typescript-eslint/recommended"],
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/explicit-function-return-type": 0
+  },
+  "parserOptions": {
+    "parser": "@typescript-eslint/parser",
+    "tsconfigRootDir": "./src",
+    "ecmaVersion": 11,
+    "sourceType": "module"
+  }
 }
