Add normalize-path package

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nuxt/typescript-runtime": "^0.2.1",
     "@nuxtjs/eslint-config": "^1.1.2",
     "@types/jest": "^24.0.18",
+    "@types/normalize-path": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
     "babel-eslint": "^10.0.3",
@@ -52,6 +53,7 @@
   },
   "dependencies": {
     "@nuxt/types": "*",
+    "normalize-path": "^3.0.0",
     "vuex": "*"
   }
 }
