--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "normalize-path": "^3.0.0"
   },
   "peerDependencies": {
-    "@nuxt/types": "*",
     "vuex": "*"
+  },
+  "optionalDependencies": {
+    "@nuxt/types": "*"
   }
 }
