--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "normalize-path": "^3.0.0"
   },
   "peerDependencies": {
+    "vue": "*",
     "vuex": "*"
   },
   "optionalDependencies": {
