feat: support store accessor in vanilla vue (#22)
* feat: support store accessor in vanilla vue

Closes #20

* style: lint

* fix: add VueConstructor type within utils

* fix: fix typings for action context

* fix: revert various changes

* fix: use evaluated state consistently

* style: reduce diff

* feat: add support for namespaced modules

BREAKING CHANGE: modules in useAccessor are non-namespaced by default

Closes #16 

* test: add namespaced tests

* docs: add docs to explain usage within store

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "prepare": "yarn build",
     "release": "yarn test && standard-version && git push --follow-tags && npm publish",
     "generate": "yarn build && yarn nuxt generate test/fixture",
-    "test": "yarn lint && yarn generate && jest && tsc --noImplicitAny --noEmit test/accessor.test.ts"
+    "test": "yarn lint && yarn generate && jest && tsc --noImplicitAny --noEmit test/accessor.test.ts && yarn tsd"
   },
   "tsd": {
     "directory": "test/tsd"
@@ -70,7 +70,9 @@
     "normalize-path": "^3.0.0"
   },
   "peerDependencies": {
-    "@nuxt/types": "*",
     "vuex": "*"
+  },
+  "optionalDependencies": {
+    "@nuxt/types": "*"
   }
 }
