--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "test": "yarn lint && yarn generate && jest && tsc --noImplicitAny --noEmit test/accessor.test.ts && yarn tsd"
   },
   "tsd": {
-    "directory": "test/tsd"
+    "directory": "test/tsd",
+    "compilerOptions": {
+      "rootDir": "."
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -63,7 +66,7 @@
     "nuxt-edge": "latest",
     "standard-version": "^7.0.0",
     "ts-loader": "^6.2.1",
-    "tsd": "^0.10.0",
+    "tsd": "^0.11.0",
     "typescript": "^3.7.2"
   },
   "dependencies": {
