--- a/package.json
+++ b/package.json
@@ -45,34 +45,20 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
     "@nuxt/typescript-build": "^0.3.6",
-    "@nuxt/typescript-runtime": "^0.2.6",
-    "@nuxtjs/eslint-config": "^2.0.0",
     "@types/jest": "^24.0.23",
     "@types/normalize-path": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
-    "codecov": "^3.6.1",
     "eslint": "^6.7.2",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
     "jest": "^24.9.0",
     "nuxt-edge": "latest",
     "standard-version": "^7.0.1",
     "ts-loader": "^6.2.1",
     "tsd": "^0.11.0",
-    "typescript": "^3.7.2"
+    "typescript": "~3.7"
   },
   "dependencies": {
-    "normalize-path": "^3.0.0"
-  },
-  "peerDependencies": {
+    "normalize-path": "^3.0.0",
     "vuex": "*"
   },
   "optionalDependencies": {
