--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@typescript-eslint/parser": "^2.9.0",
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
-    "nuxt-edge": "latest",
+    "nuxt": "latest",
     "standard-version": "^7.0.1",
     "ts-loader": "^6.2.1",
     "tsd": "^0.11.0",
