--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,45 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - master
-      - release/*
-  pull_request:
-    branches:
-      - master
+on: [push, pull_request]
 
 jobs:
-  test:
+  compatibility:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        nuxt: [2.9, 2.10]
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - uses: actions/cache@v1
+        id: cache
+        with:
+          path: "node_modules"
+          key: ${{ runner.os }}-${{ matrix.nuxt }}-${{ hashFiles('yarn.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn && yarn add nuxt@${{ matrix.nuxt }}
+
+      - name: Test project
+        run: yarn test
+
+  latest:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v1
+
+      - uses: actions/cache@v1
+        id: cache
+        with:
+          path: "node_modules"
+          key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn
+
       - name: Test project
-        run: yarn && yarn test
+        run: yarn test
