--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        nuxt: [2.9, 2.10]
+        nuxt: ["2.9", "2.10"]
 
     steps:
       - uses: actions/checkout@v1
