--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/normalize-path": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "codecov": "^3.6.1",
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
     "nuxt": "latest",
