test: improve tests (#58)
* test: improve fixture

* test: improve coverage on utils.ts

* test: achieve full test coverage

* ci: use codecov

* ci: don't upload coverage for compatibility matrix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - master
   pull_request:
     branches:
-      - '*'
+      - "*"
 
 jobs:
   compatibility:
@@ -49,3 +49,8 @@ jobs:
 
       - name: Test project
         run: yarn test
+
+      - name: Coverage
+        run: yarn codecov
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
