--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "build": "tsc",
     "prepare": "yarn build",
     "release": "yarn test && standard-version && git push --follow-tags && npm publish",
-    "generate": "yarn build && yarn nuxt generate test/fixture",
-    "test": "yarn lint && yarn generate && jest && tsc --noImplicitAny --noEmit test/accessor.test.ts && yarn tsd"
+    "test": "yarn build && yarn lint && jest && tsc --noImplicitAny --noEmit test/accessor.test.ts && yarn tsd"
   },
   "tsd": {
     "directory": "test/tsd",
@@ -49,6 +48,7 @@
     "@types/normalize-path": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "codecov": "^3.6.1",
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
     "nuxt": "latest",
