--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "@typescript-eslint/no-explicit-any": 0,
-    "@typescript-eslint/explicit-function-return-type": 0
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/member-delimiter-style": 0
   },
   "parserOptions": {
     "parser": "@typescript-eslint/parser",
