--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,12 @@
 {
   "compilerOptions": {
-    "outDir": "lib",
     "strict": true,
-    "rootDir": "src",
     "sourceMap": true,
     "declaration": true,
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"]
-  },
-  "exclude": ["node_modules", "lib", "test"]
+    "lib": ["esnext"]
+  }
 }
