--- a/packages/typed-vuex/tsconfig.json
+++ b/packages/typed-vuex/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "lib"
+    "outDir": "lib",
+    "lib": ["esnext", "dom"]
   },
   "exclude": ["node_modules", "lib", "test"]
 }
