--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "lib": ["esnext"]
+    "lib": ["esnext", "dom"]
   }
 }
