--- a/packages/typed-vuex/package.json
+++ b/packages/typed-vuex/package.json
@@ -2,8 +2,46 @@
   "name": "typed-vuex",
   "version": "0.1.13",
   "description": "A typed store accessor for Vuex.",
+  "repository": "danielroe/nuxt-typed-vuex",
+  "license": "MIT",
+  "contributors": [
+    {
+      "name": "Daniel Roe <daniel@danielcroe.com>",
+      "url": "https://github.com/danielroe"
+    }
+  ],
+  "keywords": [
+    "vuex",
+    "nuxt",
+    "typescript",
+    "vue",
+    "vuejs",
+    "nuxtjs",
+    "nuxt-module"
+  ],
+  "files": [
+    "lib",
+    "lib/index.d.ts"
+  ],
   "main": "lib/index.js",
-  "repository": "https://github.com/danielroe/nuxt-typed-vuex",
-  "author": "Daniel Roe",
-  "license": "MIT"
+  "types": "lib/index.d.ts",
+  "scripts": {
+    "build": "yarn clean && yarn compile",
+    "compile": "tsc",
+    "clean": "rm -rf lib",
+    "test:types": "yarn tsd"
+  },
+  "tsd": {
+    "directory": "test/tsd",
+    "compilerOptions": {
+      "rootDir": "."
+    }
+  },
+  "devDependencies": {
+    "tsd": "^0.11.0",
+    "vue": "latest"
+  },
+  "dependencies": {
+    "vuex": "*"
+  }
 }
