--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         run: yarn && yarn workspace nuxt-typed-vuex add nuxt@${{ matrix.nuxt }}
 
       - name: Test project
-        run: yarn test
+        run: yarn build && yarn test
 
   latest:
     runs-on: ubuntu-latest
@@ -48,7 +48,7 @@ jobs:
         run: yarn
 
       - name: Test project
-        run: yarn test
+        run: yarn build && yarn test
 
       - name: Coverage
         run: yarn codecov
