chore: improve lerna config

--- a/lerna.json
+++ b/lerna.json
@@ -2,12 +2,12 @@
   "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "conventionalCommits": true,
   "exact": true,
   "packages": ["packages/*"],
   "command": {
     "publish": {
-      "npmClient": "npm"
+      "npmClient": "npm",
+      "conventionalCommits": true
     },
     "init": {
       "exact": true
