perf: exclude source maps

--- a/packages/nuxt-typed-vuex/package.json
+++ b/packages/nuxt-typed-vuex/package.json
@@ -20,7 +20,8 @@
     "nuxt-module"
   ],
   "files": [
-    "lib"
+    "lib/**/*",
+    "!**/*.map"
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
