--- a/packages/nuxt-typed-vuex/package.json
+++ b/packages/nuxt-typed-vuex/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-typed-vuex",
-  "version": "0.1.14-alpha.0",
+  "version": "0.1.14-alpha.1",
   "description": "A typed store accessor for Nuxt.",
   "repository": "danielroe/nuxt-typed-vuex",
   "license": "MIT",
@@ -44,8 +44,8 @@
     "tsd": "^0.11.0"
   },
   "dependencies": {
+    "@nuxt/types": ">0.3.0",
     "normalize-path": "^3.0.0",
-    "typed-vuex": "0.1.14-alpha.0",
-    "@nuxt/types": ">0.3.0"
+    "typed-vuex": "0.1.14-alpha.1"
   }
 }
