chore: use conventional commits with lerna

--- a/lerna.json
+++ b/lerna.json
@@ -4,10 +4,18 @@
   "useWorkspaces": true,
   "exact": true,
   "packages": ["packages/*"],
+  "conventionalCommits": true,
   "command": {
+    "version": {
+      "conventionalCommits": true
+    },
+    "release": {
+      "conventionalCommits": true
+    },
     "publish": {
       "npmClient": "npm",
-      "conventionalCommits": true
+      "conventionalCommits": true,
+      "message": "chore(release): publish [skip-ci]"
     },
     "init": {
       "exact": true
