refactor: split into separate packages (#60)
* refactor: split types and methods

* refactor: convert to monorepo

* refactor: separate out typed-vuex

* test: fix module

* test: fix imports

* ci: build before testing

* chore(release): publish [skip-ci]

 - nuxt-typed-vuex@0.1.14-alpha.0
 - typed-vuex@0.1.14-alpha.0

* chore: add husky

* chore: improve lerna config

* chore: update dependencies

* docs: update

* perf: exclude source maps

* chore: publish

* chore: use conventional commits with lerna

* chore(release): publish [skip-ci]

 - nuxt-typed-vuex@0.1.14-alpha.2
 - typed-vuex@0.1.14-alpha.2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,10 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn && yarn add nuxt@${{ matrix.nuxt }}
+        run: yarn && yarn workspace nuxt-typed-vuex add nuxt@${{ matrix.nuxt }}
 
       - name: Test project
-        run: yarn test
+        run: yarn build && yarn test
 
   latest:
     runs-on: ubuntu-latest
@@ -48,7 +48,7 @@ jobs:
         run: yarn
 
       - name: Test project
-        run: yarn test
+        run: yarn build && yarn test
 
       - name: Coverage
         run: yarn codecov
