--- a/packages/typed-vuex/package.json
+++ b/packages/typed-vuex/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-vuex",
-  "version": "0.1.14-alpha.2",
+  "version": "0.1.14",
   "description": "A typed store accessor for Vuex.",
   "repository": "danielroe/nuxt-typed-vuex",
   "license": "MIT",
