--- a/packages/nuxt-typed-vuex/package.json
+++ b/packages/nuxt-typed-vuex/package.json
@@ -44,8 +44,10 @@
     "tsd": "^0.11.0"
   },
   "dependencies": {
-    "@nuxt/types": ">=0.3.0",
     "normalize-path": "^3.0.0",
     "typed-vuex": "0.1.16"
+  },
+  "peerDependencies": {
+    "@nuxt/types": ">=0.3.0"
   }
 }
