--- a/docs/package.json
+++ b/docs/package.json
@@ -8,6 +8,7 @@
     "vuepress": "^1.4.0"
   },
   "resolutions": {
-    "serialize-javascript": ">=3.0.0"
+    "serialize-javascript": ">=3.0.0",
+    "minimist": ">=1.2.2"
   }
 }
