--- a/docs/package.json
+++ b/docs/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "vuepress dev",
-    "build": "vuepress build && mv .vuepress/dist public"
+    "build": "vuepress build"
   },
   "devDependencies": {
     "vuepress": "^1.5.0"
