chore: upgrade deps

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
   "rules": {
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
-    "@typescript-eslint/member-delimiter-style": 0
+    "@typescript-eslint/member-delimiter-style": 0,
+    "@typescript-eslint/ban-types": 0
   },
   "parserOptions": {
     "parser": "@typescript-eslint/parser",
