--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "test": "yarn lint && jest && yarn test:types"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.0",
-    "@babel/plugin-transform-runtime": "^7.10.0",
-    "@babel/preset-env": "^7.10.0",
-    "@babel/preset-typescript": "^7.9.0",
+    "@babel/core": "latest",
+    "@babel/plugin-transform-runtime": "latest",
+    "@babel/preset-env": "latest",
+    "@babel/preset-typescript": "latest",
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
     "@nuxtjs/eslint-config-typescript": "latest",
-    "@types/jest": "latest",
+    "@types/jest": "25.2.2",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "codecov": "latest",
     "eslint": "latest",
     "husky": "latest",
-    "jest": "latest",
+    "jest": "25.4.0",
     "lerna": "latest",
-    "typescript": "~3.9"
+    "typescript": "3.9.5"
   }
 }
