--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "@babel/plugin-transform-runtime": "latest",
     "@babel/preset-env": "latest",
     "@babel/preset-typescript": "latest",
-    "@commitlint/cli": "latest",
-    "@commitlint/config-conventional": "latest",
+    "@commitlint/cli": "^8",
+    "@commitlint/config-conventional": "^8",
     "@nuxtjs/eslint-config-typescript": "latest",
-    "@types/jest": "25.2.2",
+    "@types/jest": "latest",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "codecov": "latest",
     "eslint": "latest",
     "husky": "latest",
-    "jest": "25.4.0",
+    "jest": "latest",
     "lerna": "latest",
-    "typescript": "3.9.5"
+    "typescript": "3.9.6"
   }
 }
