chore: upgrade and pin dev deps

--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "test": "yarn lint && jest && yarn test:types"
   },
   "devDependencies": {
-    "@babel/core": "latest",
-    "@babel/plugin-transform-runtime": "latest",
-    "@babel/preset-env": "latest",
+    "@babel/core": "7.11.0",
+    "@babel/plugin-transform-runtime": "7.11.0",
+    "@babel/preset-env": "7.11.0",
     "@babel/preset-typescript": "latest",
     "@commitlint/cli": "^8",
     "@commitlint/config-conventional": "^8",
-    "@nuxtjs/eslint-config-typescript": "latest",
-    "@types/jest": "latest",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
+    "@nuxtjs/eslint-config-typescript": "3.0.0",
+    "@types/jest": "26.0.8",
+    "@typescript-eslint/eslint-plugin": "3.7.1",
+    "@typescript-eslint/parser": "3.7.1",
     "codecov": "latest",
-    "eslint": "latest",
+    "eslint": "7.6.0",
     "husky": "latest",
-    "jest": "latest",
+    "jest": "26.2.2",
     "lerna": "latest",
     "typescript": "3.9.7"
   }
