--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        nuxt: ["2.9", "2.10"]
+        nuxt: ["2.9", "2.11", "2.13", "2.14"]
 
     steps:
       - uses: actions/checkout@v1
