--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -12,12 +12,13 @@
     "now-build": "nuxt generate"
   },
   "dependencies": {
-    "@vue/composition-api": "0.5.0",
-    "nuxt": "2.12.2"
+    "@vue/composition-api": "1.0.0-beta.10",
+    "nuxt": "2.14.3"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "0.6.1",
-    "nuxt-typed-vuex": "0.1.17",
-    "vue-property-decorator": "8.4.1"
+    "@nuxt/types": "^2.14.3",
+    "@nuxt/typescript-build": "2.0.2",
+    "nuxt-typed-vuex": "0.1.20",
+    "vue-property-decorator": "9.0.0"
   }
 }
