--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "lerna run build",
+    "build": "siroc build",
     "lint": "eslint --ext .ts,.tsx,.js .",
     "lint:fix": "yarn lint --fix",
     "test:types": "lerna run test:types",
@@ -30,6 +30,7 @@
     "lerna": "latest",
     "release-it": "^13.7.0",
     "release-it-yarn-workspaces": "^1.4.0",
+    "siroc": "^0.3.1",
     "typescript": "4.0.2"
   }
 }
