--- a/packages/typed-vuex/package.json
+++ b/packages/typed-vuex/package.json
@@ -2,13 +2,6 @@
   "name": "typed-vuex",
   "version": "0.1.20",
   "description": "A typed store accessor for Vuex.",
-  "repository": "danielroe/nuxt-typed-vuex",
-  "license": "MIT",
-  "author": {
-    "name": "Daniel Roe",
-    "email": "daniel@roe.dev",
-    "url": "https://github.com/danielroe"
-  },
   "keywords": [
     "vuex",
     "nuxt",
@@ -18,24 +11,26 @@
     "nuxtjs",
     "nuxt-module"
   ],
+  "repository": "danielroe/nuxt-typed-vuex",
+  "license": "MIT",
+  "author": {
+    "name": "Daniel Roe",
+    "email": "daniel@roe.dev",
+    "url": "https://github.com/danielroe"
+  },
+  "main": "lib/index.js",
+  "module": "lib/index.es.js",
+  "types": "lib/index.d.ts",
   "files": [
     "lib/**/*",
     "lib/index.d.ts",
     "!**/*.map"
   ],
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
   "scripts": {
     "build": "yarn clean && yarn compile",
-    "compile": "tsc",
     "clean": "rm -rf lib",
+    "compile": "siroc build",
     "test:types": "yarn tsd"
-  },
-  "tsd": {
-    "directory": "test/tsd",
-    "compilerOptions": {
-      "rootDir": "."
-    }
   },
   "devDependencies": {
     "tsd": "^0.13.1",
@@ -43,5 +38,11 @@
   },
   "peerDependencies": {
     "vuex": "^3.5.1"
+  },
+  "tsd": {
+    "directory": "test/tsd",
+    "compilerOptions": {
+      "rootDir": "."
+    }
   }
 }
