--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,13 +16,27 @@ jobs:
         nuxt: ["2.9", "2.11", "2.13", "2.14"]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout
 
-      - uses: actions/cache@v1
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+
+      - uses: actions/cache@v2
         id: cache
         with:
-          path: "node_modules"
-          key: ${{ runner.os }}-${{ matrix.nuxt }}-${{ hashFiles('yarn.lock') }}
+          path: |
+            node_modules
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            .yarn/*
+            !.yarn/releases
+            !.yarn/plugins
+            !.yarn/sdks
+            !.yarn/versions
+          key: yarn-${{ runner.os }}-node-v${{ matrix.node }}-nuxt-${{ matrix.nuxt }}-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node-v${{ matrix.node }}-yarn
+            ${{ runner.os }}-yarn
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
@@ -35,13 +49,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout
 
-      - uses: actions/cache@v1
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+
+      - uses: actions/cache@v2
         id: cache
         with:
-          path: "node_modules"
-          key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+          path: |
+            node_modules
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            .yarn/*
+            !.yarn/releases
+            !.yarn/plugins
+            !.yarn/sdks
+            !.yarn/versions
+          key: yarn-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
