chore: migrate lockfiles of subsidiary folders

--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,1 +1,9 @@
 .vuepress/dist
+
+# https://yarnpkg.com/advanced/qa#which-files-should-be-gitignored
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
