--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -88,3 +88,10 @@ sw.*
 
 # Vim swap files
 *.swp
+
+# https://yarnpkg.com/advanced/qa#which-files-should-be-gitignored
+*/.yarn/*
+!*/.yarn/releases
+!*/.yarn/plugins
+!*/.yarn/sdks
+!*/.yarn/versions
