chore: pin dependencies

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@babel/core": "7.11.6",
     "@babel/plugin-transform-runtime": "7.11.5",
     "@babel/preset-env": "7.11.5",
-    "@babel/preset-typescript": "latest",
+    "@babel/preset-typescript": "^7.10.4",
     "@commitlint/cli": "^8",
     "@commitlint/config-conventional": "^8",
     "@nuxtjs/eslint-config-typescript": "3.0.0",
@@ -23,11 +23,11 @@
     "@types/jest": "26.0.13",
     "@typescript-eslint/eslint-plugin": "4.0.1",
     "@typescript-eslint/parser": "4.0.1",
-    "codecov": "latest",
+    "codecov": "^3.7.2",
     "eslint": "7.8.1",
-    "husky": "latest",
+    "husky": "^4.2.5",
     "jest": "26.4.2",
-    "lerna": "latest",
+    "lerna": "^3.22.1",
     "release-it": "^14.0.1",
     "release-it-yarn-workspaces": "^1.4.0",
     "siroc": "^0.3.1",
