--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
         nuxt: ["2.9", "2.11", "2.13", "2.14"]
 
     steps:
-      - uses: actions/checkout
+      - uses: actions/checkout@master
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout
+      - uses: actions/checkout@master
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
