perf: increase tree-shakeability of module
- saves approx 4k in build size

--- a/packages/nuxt-typed-vuex/package.json
+++ b/packages/nuxt-typed-vuex/package.json
@@ -32,6 +32,7 @@
     "compile": "siroc build"
   },
   "dependencies": {
+    "consola": "^2.15.0",
     "normalize-path": "^3.0.0",
     "typed-vuex": "0.1.21"
   },
