--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,7 @@
     "now-build": "yarn generate"
   },
   "devDependencies": {
-    "@nuxt/content-theme-docs": "^0.6.1",
-    "nuxt": "^2.14.6"
+    "@nuxt/content-theme-docs": "latest",
+    "nuxt": "latest"
   }
 }
