--- a/examples/vue/package.json
+++ b/examples/vue/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "3.6.5",
-    "typed-vuex": "0.1.21",
+    "typed-vuex": "latest",
     "vue": "2.6.12",
     "vue-class-component": "7.2.5",
     "vue-property-decorator": "9.0.0",
