--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "test": "yarn lint && jest && yarn test:types"
   },
   "devDependencies": {
-    "@babel/core": "7.12.3",
-    "@babel/plugin-transform-runtime": "7.12.1",
-    "@babel/preset-env": "7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
+    "@babel/core": "7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@nuxtjs/eslint-config-typescript": "4.0.0",
+    "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@release-it/conventional-changelog": "^2.0.0",
-    "@types/jest": "26.0.15",
-    "@typescript-eslint/eslint-plugin": "4.6.1",
-    "@typescript-eslint/parser": "4.6.1",
-    "codecov": "^3.8.0",
-    "eslint": "7.12.1",
-    "husky": "^4.3.0",
-    "jest": "26.6.2",
+    "@types/jest": "26.0.19",
+    "@typescript-eslint/eslint-plugin": "4.10.0",
+    "@typescript-eslint/parser": "4.10.0",
+    "codecov": "^3.8.1",
+    "eslint": "7.15.0",
+    "husky": "4.3.6",
+    "jest": "26.6.3",
     "lerna": "^3.22.1",
-    "release-it": "^14.2.1",
+    "release-it": "^14.2.2",
     "release-it-yarn-workspaces": "^2.0.0",
-    "siroc": "^0.4.0",
-    "typescript": "4.0.5"
+    "siroc": "^0.6.0",
+    "typescript": "4.1.3"
   }
 }
