--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,19 @@
   "builds": [
     {
       "src": "docs/package.json",
-      "use": "@now/static-build"
+      "use": "@vercel/static-build"
     },
     {
       "src": "examples/nuxt-ts/package.json",
-      "use": "@now/static-build"
+      "use": "@vercel/static-build"
     },
     {
       "src": "examples/nuxt/package.json",
-      "use": "@now/static-build"
+      "use": "@vercel/static-build"
     },
     {
       "src": "examples/vue/package.json",
-      "use": "@now/static-build"
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [{ "handle": "filesystem" }, { "src": "/(.*)", "dest": "/docs/$1" }]
