test: specify corejs@3

--- a/packages/nuxt-typed-vuex/package.json
+++ b/packages/nuxt-typed-vuex/package.json
@@ -43,6 +43,7 @@
     "@nuxt/typescript-build": "^2.0.3",
     "@nuxt/typescript-runtime": "^2.0.0",
     "@types/normalize-path": "^3.0.0",
+    "core-js": "3",
     "nuxt": "^2.14.12",
     "ts-loader": "^8.0.12",
     "tsd": "^0.14.0"
