--- a/packages/typed-vuex/package.json
+++ b/packages/typed-vuex/package.json
@@ -34,10 +34,11 @@
   },
   "devDependencies": {
     "tsd": "^0.14.0",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vuex": "^3.6.0"
   },
   "peerDependencies": {
-    "vuex": "^3.5.1"
+    "vuex": "^3.6.0"
   },
   "tsd": {
     "directory": "test/tsd",
