--- a/package.json
+++ b/package.json
@@ -8,28 +8,31 @@
     "build": "siroc build",
     "lint": "eslint --ext .ts,.tsx,.js .",
     "lint:fix": "yarn lint --fix",
+    "postinstall": "husky install",
     "test:types": "lerna run test:types",
     "test": "yarn lint && jest && yarn test:types"
   },
   "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
+    "@babel/core": "7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.15",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.13",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "26.0.20",
-    "@typescript-eslint/eslint-plugin": "4.14.2",
-    "@typescript-eslint/parser": "4.14.2",
+    "@typescript-eslint/eslint-plugin": "4.15.0",
+    "@typescript-eslint/parser": "4.15.0",
     "codecov": "^3.8.1",
+    "conventional-changelog-conventionalcommits": "^4.5.0",
     "eslint": "7.19.0",
-    "husky": "4.3.8",
+    "husky": "5.0.9",
     "jest": "26.6.3",
     "lerna": "^3.22.1",
-    "release-it": "^14.2.2",
+    "release-it": "^14.3.0",
     "release-it-yarn-workspaces": "^2.0.0",
+    "semver": "^7.3.4",
     "siroc": "^0.6.3",
     "typescript": "4.1.3"
   }
