--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
         run: yarn && yarn workspace nuxt-typed-vuex add nuxt@${{ matrix.nuxt }}
 
       - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true' && matrix.node == '2.13'
+        if: steps.cache.outputs.cache-hit != 'true'
         run: yarn workspace nuxt-typed-vuex add @babel/preset-env@~7.12.17
 
       - name: Test project
