--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn workspace nuxt-typed-vuex add @babel/preset-env@~7.12.17
+        run: yarn add @babel/preset-env@~7.12.17
 
       - name: Test project
         run: yarn build && yarn test
