--- a/packages/nuxt-typed-vuex/package.json
+++ b/packages/nuxt-typed-vuex/package.json
@@ -30,7 +30,7 @@
     "build": "yarn clean && yarn compile",
     "clean": "rm -rf lib test/fixture/.nuxt test/fixture/dist",
     "compile": "siroc build",
-    "dev": "nuxt-ts test/fixture"
+    "dev": "nuxt test/fixture"
   },
   "dependencies": {
     "consola": "^2.15.3",
@@ -40,8 +40,7 @@
   "devDependencies": {
     "@nuxt/test-utils": "^0.1.3",
     "@nuxt/types": "^2.15.2",
-    "@nuxt/typescript-build": "^2.0.5",
-    "@nuxt/typescript-runtime": "^2.0.1",
+    "@nuxt/typescript-build": "^2.0.6",
     "@types/normalize-path": "^3.0.0",
     "core-js": "3.9.0",
     "nuxt": "^2.15.2",
