--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -2,5 +2,5 @@
   "title": "Typed Vuex",
   "url": "https://composition-api.now.sh",
   "twitter": "danielcroe",
-  "github": "danielroe/typed-vuex"
+  "repo": "danielroe/typed-vuex"
 }
