--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,8 @@
     "now-build": "yarn generate"
   },
   "devDependencies": {
-    "@nuxt/content-theme-docs": "^0.10.1",
-    "nuxt": "^2.15.2"
+    "core-js": "3.9.1",
+    "docus": "^0.1.5",
+    "nuxt": "^2.15.3"
   }
 }
