update docs settings

--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -1,6 +1,6 @@
 {
   "title": "Typed Vuex",
-  "url": "https://composition-api.now.sh",
+  "url": "https://typed-vuex.roe.dev/",
   "twitter": "danielcroe",
-  "repo": "danielroe/typed-vuex"
+  "github": "danielroe/typed-vuex"
 }
