--- a/docs/package.json
+++ b/docs/package.json
@@ -6,8 +6,8 @@
     "now-build": "yarn generate"
   },
   "devDependencies": {
-    "core-js": "3.11.1",
-    "docus": "^0.1.5",
-    "nuxt": "^2.15.4"
+    "core-js": "3.12.1",
+    "docus": "0.1.5",
+    "nuxt": "^2.15.5"
   }
 }
