--- a/docs/package.json
+++ b/docs/package.json
@@ -1,13 +1,11 @@
 {
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "generate": "nuxt generate",
+    "dev": "npx nuxt dev",
+    "generate": "npx nuxt generate",
     "now-build": "yarn generate"
   },
   "devDependencies": {
-    "core-js": "3.12.1",
-    "docus": "0.1.5",
-    "nuxt": "^2.15.5"
+    "docus": "^0.5.6"
   }
 }
