feat: add `createMapper` convenience utility

--- a/packages/typed-vuex/package.json
+++ b/packages/typed-vuex/package.json
@@ -33,6 +33,7 @@
     "test:types": "yarn tsd"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0",
     "tsd": "^0.19.1",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
