--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -19,6 +19,6 @@
     "@nuxt/types": "latest",
     "@nuxt/typescript-build": "latest",
     "nuxt-typed-vuex": "latest",
-    "vue-property-decorator": "9.0.0"
+    "vue-property-decorator": "^9"
   }
 }
